test/compile_fail/frozen_format_unmatched_brace.cpp
#include "frozenchars.hpp"

int main() {
  constexpr auto x = frozenchars::frozen_format<"hello {">(42);
  (void)x;
  return 0;
}
